// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should render invalid style tag 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 8px;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: #ff5757;
  background-color: #ffffff;
  color: #ff5757;
  font-size: 0.875rem;
  white-space: nowrap;
  cursor: pointer;
}

.c1 input {
  color: #ff5757;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow-x: hidden;
}

<div>
  <div
    class="c0"
    style="opacity: 1; margin-right: 4px; width: 0px;"
  >
    <div
      class="c1"
    >
      Tailor UI
    </div>
  </div>
</div>
`;

exports[`Tag should render tag 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 8px;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: #3990cd;
  background-color: #fbfbfd;
  color: #3990cd;
  font-size: 0.875rem;
  white-space: nowrap;
  cursor: pointer;
}

.c1 input {
  color: #3990cd;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow-x: hidden;
}

<div>
  <div
    class="c0"
    style="opacity: 1; margin-right: 4px; width: 0px;"
  >
    <div
      class="c1"
    >
      Tailor UI
    </div>
  </div>
</div>
`;

exports[`Tag should render tag with prefix 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 8px;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: #3990cd;
  background-color: #fbfbfd;
  color: #3990cd;
  font-size: 0.875rem;
  white-space: nowrap;
  cursor: pointer;
}

.c1 input {
  color: #3990cd;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  margin-right: 8px;
  padding-right: 8px;
  border-right: 1px solid;
  border-color: #3990cd;
  color: #3990cd;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow-x: hidden;
}

<div>
  <div
    class="c0"
    style="opacity: 1; margin-right: 4px; width: 0px;"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        1
      </span>
      Tailor UI
    </div>
  </div>
</div>
`;
